// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test form toggle test toggle uncontrolled 1`] = `
<DocumentFragment>
  <span
    class="sc-bdfBwQ dnfcXD"
    data-testid="toggle"
  >
    <img
      alt="toggleIco"
      src="heartEmpty.png"
    />
  </span>
</DocumentFragment>
`;

exports[`test form toggle test toggle uncontrolled 2`] = `
<DocumentFragment>
  <span
    class="sc-bdfBwQ dnfcXD"
    data-testid="toggle"
  >
    <img
      alt="toggleIco"
      src="heartFilled.png"
    />
  </span>
</DocumentFragment>
`;
